--- a/css/main.css
+++ b/css/main.css
@@ -94,13 +94,82 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+html {
+    box-sizing: border-box;
+    color: #fcfcf8;
+}
 
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 
+body {
+    padding: 1em 0;
+    background-color: #fcfcf8;
+    font-family: "Open Sans", Sans-serif;
+    font-style: normal;
+}
 
+img {
+    max-width: 100%;
+}
 
+.header {
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+    padding: 1em 0;
+}
 
+/*Main-Navigation*/
+.main-nav {
+    font-size: .75em;
+    margin: .5em 0;
+}
 
+.main-nav ul {
+    list-style-type: none;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
 
+.main-nav li {
+    display: inline-block;
+    padding: 1em;
+}
+
+.main-nav a {
+    text-decoration: none; 
+    color: #000;
+}
+
+.main-nav a:hover {
+    color: #668537;
+}
+
+.main-nav {
+    display: inline;
+}
+
+.market-favorites {
+    position: relative;
+}
+
+.favorites-image {
+    width: 20em;
+    height: 20em;
+    float: right;
+}
+
+/*Jumbotron*/
+.jumbotron-content {
+    max-width: 100%;
+}
+
+/*Section Headers*/
+.market-favorites .section-header {
+    text-align: center;
+}
 
 
 
