--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,7 @@ img {
     margin: auto;
 }
 
+/*Favorites Section*/
 .favorites-thumb {
     position: relative;
     width: 33%;
@@ -204,14 +205,43 @@ img {
     margin: 0;
 }
 
-article img:hover {
+.favorites-bg:hover {
     opacity: 0.6;
 }
 
+/*Our Story Section*/
 
+.section a {
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-weight: lighter;
+    font-size: 1.2em;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    letter-spacing: 1px;
+    color: #000;
+}
 
+.section p {
+    font-size: .9em;
+    font-weight: normal;
+    letter-spacing: normal;
+}
 
+/*Footer*/
+footer {
+    background-color: #dbd4cb;
+}
 
+footer p {
+    font-size: .7em;
+    font-weight: lighter;
+    border-top: 1px solid #000;
+    text-align: right;
+    letter-spacing: normal;
+    margin: 0 4.6875em;
+    padding: 2.2em 0 6em;
+}
 
 
 /* ==========================================================================
