--- a/css/main.css
+++ b/css/main.css
@@ -117,19 +117,20 @@ img {
 .header {
     text-align: center;
     border-bottom: 1px solid #ddd;
-    padding: 1em 0;
+    padding: 2em 0 1em 0;
 }
 
 /*Main-Navigation*/
 .main-nav {
-    font-size: .785em;
-    border: red solid 1px;
+    font-size: .782em;
+    font-weight: lighter;
     margin: 0;
 }
 
 .main-nav ul {
     list-style-type: none;
     text-align: center;
+    margin: 1.2em 0;
 }
 
 .main-nav li {
@@ -151,20 +152,19 @@ img {
 }
 
 .main-nav li:not(:last-child) {
-    border-right: solid 1px #000
+    border-right: solid 1px #000;
 }
 
 /*Jumbotron*/
 .jumbotron {
     width: 100%;
-    height: 50%;
 }
 
 /*Page-Section*/
 .page-section {
-    width: 980px;
-    margin: auto;
-    border-bottom: 1px solid #ddd;
+    width: 62em;
+    margin: 20em auto;
+    border: red solid 1px;
 }
 
 /*Section Headers*/
@@ -172,6 +172,7 @@ img {
     padding: 1em;
     width: 26em;
     margin: auto;
+    border-top: 1px solid #ddd;
 }
 
 /*Favorites Section*/
@@ -231,18 +232,57 @@ img {
 /*Footer*/
 footer {
     background-color: #dbd4cb;
+    height: 34em;
 }
 
-footer p {
+.footer-width {
+    width: 980px;
+    margin: auto;
+    padding-top: 12em;
+    border: red solid 1px;
+}
+
+.nav-section {
+    float: left;
+    width: 25%;
+}
+
+.nav-section h3 {
+    text-transform: uppercase;
+    font-size: 1.1em;
+    letter-spacing: 3px;
+}
+
+.nav-section a {
+    color: #000;
+    font-size: 0.9em;
+    font-weight: normal;
+    text-decoration: none;
+    line-height: 2.2em;
+    margin: 0;
+}
+
+.nav-section ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.address p {
+    margin: 0;
+    padding: 0;
+}
+
+.footer-copyright {
+    clear: left;
+    width: 88em;
+    margin: 2.3em auto;
+    padding-top: 1.4em;
     font-size: .7em;
     font-weight: lighter;
     border-top: 1px solid #000;
     text-align: right;
     letter-spacing: normal;
-    margin: 0 4.6875em;
-    padding: 2.2em 0 6em;
 }
-
 
 /* ==========================================================================
    Helper classes
