--- a/css/main.css
+++ b/css/main.css
@@ -252,7 +252,6 @@ a {
 }
 
 /*Blog Section*/
-/*Our Story Section*/
 .blog {
     overflow: hidden;
     border-top: 1px solid #ddd;
@@ -290,6 +289,18 @@ a {
     font-weight: normal;
     letter-spacing: .5px;
     line-height: 1.5em;
+}
+
+/*Learn More with Arrow*/
+.arrow-right {
+    width: 0;
+    height: 0;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid transparent;/*
+    border-style: solid;
+    border-width: 8px 0 8px 10px;
+    border-color: transparent transparent transparent #000;*/
 }
 
 /*Footer*/
